-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8
-
Android 13 emulator, x86_64
-
-
15674f4ce (dev), a4f4058d6 (6.8), 0dfb25655 (6.7)
How to reproduce:
- Create a LinearLayout and set it as content view of an Activity
- Add an android.widget.Button to the Layout.
- Instantiate a QtQuickView, set layout params and loadComponent(). The component may have any kind of component that handles touch inputs. (MouseArea, Button, ...)
- Add the QtQuickView to the same layout
Expected behavior:
The user touches an area that is intended to handle user inputs, and see UI changes or log outputs.
Actual behavior:
The component does not react to user inputs.
Environment:
Android 13 emulator, x86_64
More info:
If the QtQuickView gets added to the layout before the Button, the QtQuickView gets touch inputs as expected. The Button also reacts to touch inputs.
// Create a LinearLayout layout = new LinearLayout(this); layout.setOrientation(LinearLayout.VERTICAL); TextView textView = new TextView(this); textView.setText("Hello World"); Button button = new Button(this); quickView = new QtQuickView(this); mainQml = new Main(); quickView.loadComponent(mainQml); LinearLayout.LayoutParams params = new LinearLayout.LayoutParams(400, 400); //in the following order it can handle touches //layout.addView(quickView, params); //layout.addView(textView); //layout.addView(button); //layout.addView(new Button(this)); //but not the following order it can handle touches layout.addView(textView); layout.addView(button); layout.addView(new Button(this)); layout.addView(quickView, params);
- is required for
-
QTBUG-125086 Embedded QML and Qt content as Android View work for Qt 6.8
-
- Closed
-
For Gerrit Dashboard: QTBUG-126178 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
568225,6 | Android: Map touch position to global coordinates | dev | qt/qtbase | Status: MERGED | +2 | 0 |
568421,2 | Android: Map touch position to global coordinates | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
568498,2 | Android: Map touch position to global coordinates | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |